# mythical-worlds

./: .gitignore  BLURB.md  LEARNINGS.md  README.md  TASKS.md  environment.yml  pyproject.toml
configs/: queries_beowulf.yaml  queries_iliad.yaml  queries_iliad_with_ood.yaml  queries_iliad_with_ood_small.yaml  queries_myths.yaml
notebooks/: build_rag.ipynb  download_and_preprocess_data.ipynb  experiment_chunking.ipynb
src/embeddings/: embed_chunks.py
src/evaluation/: experiment_chunking.py  hallucination_eval.py
src/ingestion/: download_gutenberg.py  preprocess.py
src/retrieval/: rag_pipeline.py
src/ui/: app.py  chunking_dashboard.py
